--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -55,7 +55,10 @@
     "react-native-wheel-color-picker": "^1.3.1",
     "react-native-worklets": "^0.4.1",
     "react-redux": "^9.1.2",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
