--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
@@ -38,6 +39,7 @@
     "lucide-react-native": "^0.525.0",
     "nativewind": "latest",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-action-sheet": "^2.2.0",
     "react-native-chart-kit": "^6.12.0",
@@ -52,13 +54,11 @@
     "react-native-screens": "~4.11.1",
     "react-native-uuid": "^2.0.3",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-web": "^0.20.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "react-native-worklets": "^0.4.1",
     "react-redux": "^9.1.2",
-    "socket.io-client": "^4.8.1",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
