--- a/app-server/package.json
+++ b/app-server/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/socket.io": "^3.0.1",
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cloudinary": "^2.7.0",
