--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
     "expo-av": "~15.1.7",
+    "expo-camera": "^16.1.11",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
