--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -58,8 +58,7 @@
     "react-native-web": "^0.20.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "react-native-worklets": "^0.4.1",
-    "react-redux": "^9.1.2",
-    "socket.io-client": "^4.8.1"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
