--- a/my-expo-app/package.json
+++ b/my-expo-app/package.json
@@ -28,7 +28,6 @@
     "clsx": "^2.1.1",
     "expo": "^53.0.20",
     "expo-av": "~15.1.7",
-    "expo-camera": "^16.1.11",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "~18.1.11",
     "expo-image-picker": "~16.1.4",
@@ -58,7 +57,8 @@
     "react-native-web": "^0.20.0",
     "react-native-wheel-color-picker": "^1.3.1",
     "react-native-worklets": "^0.4.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
