This is a multi-line commit message template.

--- a/app-react/.gitignore
+++ b/app-react/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+.env
+.env.test 
+.env.production
+.env.local
+.env.*.local
+.cache
+.next
+output
+coverage        
+.cache
+.nuxt
+*.tsbuildinfo
+build
+temp
+tmp
